# glazec

./: README.md
.github/workflows/: metrics.yml
crates/agent-sdk/: Cargo.toml  README.md
crates/agent-sdk/examples/: claude_code.rs
crates/agent-sdk/src/: stdio.rs
crates/agent-sdk/src/claude/: hooks.rs  mcp.rs  messages.rs  mod.rs  options.rs
