[package]
name = "agent-sdk"
version = "0.1.0"
edition = "2024"

# Standalone marker so the crate builds on its own when vendored outside the
# upstream `ante-preview` workspace.
[workspace]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.17"
tokio = { version = "1.52.3", features = ["io-util", "macros", "process", "rt-multi-thread"] }
which = "8.0.0"

[dev-dependencies]
clap = { version = "4.6", features = ["derive"] }
